Add mass, vector skills

--- a/Assets/Scripts/GUI/Layout/MassComponentController.uxml
+++ b/Assets/Scripts/GUI/Layout/MassComponentController.uxml
@@ -2,6 +2,14 @@
 <UXML xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xmlns="UnityEngine.UIElements" xsi:noNamespaceSchemaLocation="../../../UIElementsSchema/UIElements.xsd" xsi:schemaLocation="UnityEngine.UIElements ../../../UIElementsSchema/UnityEngine.UIElements.xsd">
 
+    <VisualElement name = "property-controls-container" class = "flex-rows">
+        <Label name = "property-control-name" text = "Value"/>
+        <Label name = "property-value" text = "value bind"/>
+        <Button name = "push" text = "Push"/>
+        <Button name = "pull" text = "Pull"/>
+        <Button name = "toss" text = "Toss"/>
+    </VisualElement>
+
     <VisualElement name = "power-description-container" class = "flex-rows">
         <VisualElement name = "power-controls-container" class = "flex-rows">
             <Button name = "power-sub" text = "-"/>
@@ -9,15 +17,5 @@
         </VisualElement>
         <Label name = "power-control-name" text = "Power"/>
         <Label name = "power-value" text = "Value"/>
-    </VisualElement>
-
-    <VisualElement name = "property-description-container" class = "flex-rows">
-
-        <VisualElement name = "property-controls-container" class = "flex-rows">
-            <Button name = "prop-sub" text = "-"/>
-            <Button name = "prop-add" text = "+"/>
-        </VisualElement>
-        <Label name = "property-control-name" text = "Value"/>
-        <Label name = "property-value" text = "value bind"/>
     </VisualElement>
 </UXML>
